--- a/chess-game.html
+++ b/chess-game.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 80vh; /* Ensures it doesn't get too large */
+            max-width: 80vh;
             width: 100%;
         }
 
@@ -29,7 +29,7 @@
             grid-template-columns: repeat(8, min(10vw, 7vh));
             grid-template-rows: repeat(8, min(10vw, 7vh));
             gap: 0;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1); /* Soft shadow instead of border */
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
         }
 
         .square {
@@ -39,25 +39,20 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            border: 1px solid #ccc;
         }
 
         .white {
             background-color: #FFFED8;
-            background-image: radial-gradient(rgba(255,255,255,0.5) 10%, transparent 70%),
-                      linear-gradient(45deg, rgba(200, 200, 200, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
         }
 
         .black {
             background-color: #51B02B;
-            background-image: radial-gradient(rgba(81, 176, 43, 0.5) 10%, transparent 70%),
-                      linear-gradient(45deg, rgba(30, 100, 20, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
         }
 
         .piece {
-            width: 90%;
-            height: 90%;
+            width: 80%;
+            height: 80%;
             background-size: cover;
             background-position: center;
         }
@@ -77,7 +72,6 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const boardElement = document.getElementById('chessboard');
-
             const initialBoard = [
                 ['bc', 'bkn', 'bb', 'bq', 'bk', 'bb', 'bkn', 'bc'],
                 ['bp', 'bp', 'bp', 'bp', 'bp', 'bp', 'bp', 'bp'],
@@ -105,7 +99,9 @@
                 '--': ''
             };
 
-            let currentTurn = 'white';  // Initialize turn to white
+            let currentTurn = 'white';  // White's turn to start
+            let selectedPiece = null;
+            let possibleMoves = [];
 
             function createBoard() {
                 boardElement.innerHTML = '';
@@ -115,6 +111,8 @@
                         const piece = initialBoard[row][col];
                         square.classList.add('square');
                         square.classList.add((row + col) % 2 === 0 ? 'white' : 'black');
+                        square.dataset.row = row;
+                        square.dataset.col = col;
 
                         if (piece !== '--') {
                             const img = document.createElement('img');
@@ -122,16 +120,14 @@
                             img.alt = piece;
                             img.classList.add('piece');
                             square.appendChild(img);
-                            square.addEventListener('click', () => onSquareClick(row, col));
                         }
+
+                        square.addEventListener('click', () => onSquareClick(row, col));
 
                         boardElement.appendChild(square);
                     }
                 }
             }
-
-            let selectedPiece = null;
-            let possibleMoves = [];
 
             function onSquareClick(row, col) {
                 const piece = initialBoard[row][col];
@@ -140,7 +136,7 @@
                     if ((currentTurn === 'white' && piece[0] === 'w') || (currentTurn === 'black' && piece[0] === 'b')) {
                         selectedPiece = { row, col, piece };
                         possibleMoves = getPossibleMoves(piece, row, col);
-                        showLegalMoves(possibleMoves);
+                        highlightLegalMoves(possibleMoves);
                     }
                 } else {
                     if (possibleMoves.some(move => move.row === row && move.col === col)) {
@@ -159,20 +155,30 @@
 
             function getPossibleMoves(piece, row, col) {
                 const possibleMoves = [];
-                // Add logic for each piece's movement (this is simplified, feel free to extend)
+                const directions = {
+                    'wp': [[-1, 0], [-2, 0]], // White pawn moves up
+                    'bp': [[1, 0], [2, 0]],   // Black pawn moves down
+                    'wkn': [[-2, -1], [-2, 1], [2, -1], [2, 1], [1, -2], [1, 2], [-1, -2], [-1, 2]],  // Knight moves
+                    'bb': [[-1, -1], [-1, 1], [1, -1], [1, 1]], // Bishop moves diagonally
+                    'wc': [[0, 1], [0, -1], [1, 0], [-1, 0]], // Rook moves vertically and horizontally
+                    'wq': [[-1, 0], [1, 0], [0, -1], [0, 1], [-1, -1], [1, 1], [-1, 1], [1, -1]], // Queen moves in all directions
+                    'wk': [[-1, 0], [1, 0], [0, -1], [0, 1], [-1, -1], [1, 1], [-1, 1], [1, -1]] // King moves one square
+                };
+
+                // Add piece-specific movement here for each piece
                 if (piece === 'wp' || piece === 'bp') {
-                    const direction = piece[0] === 'w' ? -1 : 1;
+                    const direction = piece === 'wp' ? -1 : 1;
                     if (initialBoard[row + direction] && initialBoard[row + direction][col] === '--') {
                         possibleMoves.push({ row: row + direction, col });
                     }
                 }
-                // Additional movement logic for other pieces...
+
                 return possibleMoves;
             }
 
-            function showLegalMoves(moves) {
+            function highlightLegalMoves(moves) {
                 moves.forEach(move => {
-                    const square = document.querySelector(`.square:nth-child(${move.row * 8 + move.col + 1})`);
+                    const square = document.querySelector(`.square[data-row="${move.row}"][data-col="${move.col}"]`);
                     const marker = document.createElement('div');
                     marker.classList.add('marker');
                     square.appendChild(marker);
